--- a/flweekr/WebContent/css/superfish.css
+++ b/flweekr/WebContent/css/superfish.css
@@ -1,7 +1,7 @@
  
 .menu_block  {
 	position: relative;
-	padding-left: 144px;
+	padding-left: 170px;
 	padding-top: 97px;
 
 }
@@ -18,8 +18,8 @@ nav{ position:relative;padding: 0px 0 0 0;}
 
 }
 
-.sf-menu>li:first-child+li+li {
-	margin-right: 227px;
+.sf-menu>li:first-child+li {
+	margin-right: 276px;
 }
 
 .sf-menu>li+li {
