--- a/flweekr/.settings/org.eclipse.wst.common.component
+++ b/flweekr/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="flweekr">
+    <wb-module deploy-name="easytrip">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="flweekr"/>
-        <property name="java-output-path" value="/flweekr/build/classes"/>
+        <property name="java-output-path" value="/easytrip/build/classes"/>
+        <property name="context-root" value="easytrip"/>
     </wb-module>
 </project-modules>
