--- a/flweekr/WebContent/css/block.css
+++ b/flweekr/WebContent/css/block.css
@@ -101,7 +101,8 @@ a:hover, a:active{
 #container{
 	position:relative;
 	width:1100px;
-	margin:0 auto 25px;
+	margin-left:auto;
+	margin-right:auto;
 	padding-bottom: 10px;
 	
 }
